crates/lingui_macro/tests/snapshots/js_define_message__define_message_should_support_template_literal.snap
---
source: crates/lingui_macro/tests/js_define_message.rs
---
import { defineMessage, msg } from '@lingui/macro';
const message1 = defineMessage`Message`;
const message2 = msg`Message`

↓ ↓ ↓ ↓ ↓ ↓

const message1 = /*i18n*/ {
    id: "xDAtGP",
    message: "Message"
};
const message2 = /*i18n*/ {
    id: "xDAtGP",
    message: "Message"
};
