crates/lingui_macro/tests/snapshots/js_define_message__should_expand_values.snap
---
source: crates/lingui_macro/tests/js_define_message.rs
---
import { defineMessage, plural, arg } from '@lingui/macro';
const message = defineMessage({
  message: `Hello ${name}`
})

↓ ↓ ↓ ↓ ↓ ↓

const message = /*i18n*/ {
    id: "OVaF9k",
    message: "Hello {name}",
    values: {
        name: name
    }
};
