crates/lingui_macro/tests/snapshots/js_define_message__should_preserve_custom_id.snap
---
source: crates/lingui_macro/tests/js_define_message.rs
---
import { defineMessage, plural, arg } from '@lingui/macro';
const message = defineMessage({
  comment: "Description",
  id: "custom.id",
  message: "Message",
})

↓ ↓ ↓ ↓ ↓ ↓

const message = /*i18n*/ {
    id: "custom.id",
    message: "Message",
    comment: "Description"
};
